# simple-cashier-app

./: .env.example  README.md  main.py  pre_start.py  pyproject.toml
app/api/v1/: deps.py  routers.py
app/api/v1/endpoints/: auth.py  orders.py  product.py  users.py
app/core/: config.py  database.py  security.py  utils.py
app/crud/: auths.py  users.py
app/models/: order.py  order_product.py  product.py  user.py
app/schemas/: order.py  product.py  user.py
